Modify greeting in index.html
Updated greeting and removed love message.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Hello, Kevin!</title>
 </head>
 <body>
-    <h1>HELLO suji❤️</h1>
-    <p>i love you chalom 💗🥰</p>
+    <h1>HELLO</h1>
+    <p hiiiii </p>
 </body>
 </html>
+
 
 
