--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Hello, Kevin!</title>
-</head>
-<body>
-    <h1>HELLO</h1>
-    <p hiiiii </p>
-</body>
+  <head>
+    <title>Hello, World!</title>
+  </head>
+  <body>
+    <h1>Hello</h1>
+    <form action="/submit" method="POST">
+      <button type="submit" name="response" value="yes">Yes</button>
+      <button type="submit" name="response" value="no">No</button>
+    </form>
+  </body>
 </html>
+
 
 
 
