Update index.html to display love message

--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello, World!</title>
+    <title>I Love You</title>
+    <style>
+      body {
+        text-align: center;
+        font-family: 'Segoe UI', sans-serif;
+        background-color: #fff0f5;
+        padding-top: 80px;
+      }
+      h1 {
+        font-size: 60px;
+        font-weight: bold;
+        color: #e6005c;
+      }
+      img {
+        margin-top: 30px;
+        width: 160px;
+        height: auto;
+      }
+    </style>
   </head>
   <body>
-    <h1>Hello</h1>
-    <form action="/submit" method="POST">
-      <button type="submit" name="response" value="yes">Yes</button>
-      <button type="submit" name="response" value="no">No</button>
-    </form>
+    <h1>I LOVE YOU</h1>
+    <img src="https://copilot.microsoft.com/th/id/BCO.e68882f2-4f41-4502-b998-e30478477918.png" alt="Rose">
   </body>
 </html>
