--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>I Love You</title>
+    <title>I Love You Tessakutty</title>
     <style>
       :root {
         --bg: #fff0f5;
@@ -66,3 +66,4 @@
     </main>
   </body>
 </html>
+
