--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>I Love You Tessakutty</title>
+    <title>I Love You </title>
     <style>
       :root {
         --bg: #fff0f5;
@@ -56,7 +56,7 @@
   </head>
   <body>
     <main>
-      <h1>I Love You</h1>
+      <h1>I Love You Tessakutty</h1>
       <div class="image-wrap" aria-hidden="false">
         <!-- Confirm this URL resolves and you have permission to use it.
              If not, replace with a local path like "images/rose.png". -->
@@ -66,4 +66,5 @@
     </main>
   </body>
 </html>
+
 
