--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
   <main>
     <h1>I Love You Tessakutty</h1>
     <div class="image-wrap">
-      <img src="https://copilot.microsoft.com/th/id/BCO.e68882f2-4f41-4502-b998-e30478477918.png"
-           alt="Single red rose on a light pink background" />
+      <img src="your-image-url.jpg"
+     alt="Close-up of a fully bloomed pink rose with ruffled petals" />
     </div>
 
     <button onclick="showHearts()">I Love You Too</button>
@@ -93,3 +93,4 @@
   </script>
 </body>
 </html>
+
