--- a/index.html
+++ b/index.html
@@ -1,96 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>I Love You</title>
-  <style>
-    :root {
-      --bg: #fff0f5;
-      --accent: #e6005c;
-      --text: #3a3a3a;
-    }
-
-    html, body {
-      height: 100%;
-      margin: 0;
-      overflow: hidden;
-    }
-
-    body {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      text-align: center;
-      font-family: 'Segoe UI', Roboto, system-ui, -apple-system, "Helvetica Neue", Arial, sans-serif;
-      background-color: var(--bg);
-      color: var(--text);
-      padding: 24px;
-      position: relative;
-    }
-
-    h1 {
-      font-size: clamp(28px, 5vw, 60px);
-      font-weight: 700;
-      color: var(--accent);
-      margin: 0;
-    }
-
-    .image-wrap {
-      margin-top: 24px;
-      max-width: 320px;
-      width: 100%;
-    }
-
-    .image-wrap img {
-      display: block;
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-    }
-
-    button {
-      margin-top: 32px;
-      padding: 12px 24px;
-      font-size: 16px;
-      background-color: var(--accent);
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-
-    .heart {
-      position: absolute;
-      font-size: 24px;
-      pointer-events: none;
-    }
-  </style>
+    <title>For My Best Friend</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f7e8ff;
+            text-align: center;
+            padding-top: 100px;
+        }
+        #box {
+            background: white;
+            padding: 30px;
+            width: 300px;
+            margin: auto;
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.1);
+        }
+        #message {
+            margin-top: 20px;
+            font-size: 20px;
+            font-weight: bold;
+        }
+        button {
+            padding: 10px 20px;
+            border: none;
+            background: #a855f7;
+            color: white;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+        button:hover {
+            background: #9333ea;
+        }
+    </style>
 </head>
 <body>
-  <main>
-    <h1>I Love You Tessakutty</h1>
-    <div class="image-wrap">
-     
+
+<div id="box">
+    <h2>Enter your best friend's name</h2>
+
+    <form method="POST">
+        <input type="text" name="friendname" placeholder="Type name here">
+        <br><br>
+        <button type="submit">Reveal</button>
+    </form>
+
+    {% if name %}
+    <div id="message">
+        This website is for my best friend:<br><br>
+        ❤️ {{ name }} ❤️
     </div>
+    {% endif %}
+</div>
 
-    <button onclick="showHearts()">I Love You Too</button>
-  </main>
-
-  <script>
-    function showHearts() {
-      for (let i = 0; i < 100; i++) {
-        const heart = document.createElement('div');
-        heart.className = 'heart';
-        heart.textContent = '❤️';
-        heart.style.top = Math.random() * window.innerHeight + 'px';
-        heart.style.left = Math.random() * window.innerWidth + 'px';
-        document.body.appendChild(heart);
-      }
-    }
-  </script>
 </body>
 </html>
-
-
