--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+
+<!-- IMPORTANT: Mobile layout -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>Happy Birthday 💖</title>
 
 <style>
+    * {
+        box-sizing: border-box;
+    }
+
     body {
         margin: 0;
         height: 100vh;
@@ -12,31 +20,28 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-family: Arial, sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
         overflow: hidden;
     }
 
-    /* Card container */
-    .card {
-        width: 330px;
+    /* Phone screen card */
+    .phone-card {
+        width: 92vw;
+        max-width: 360px;
         background: #fff6fa;
-        border-radius: 28px;
-        padding: 32px 26px;
+        border-radius: 30px;
+        padding: 30px 22px 34px;
         text-align: center;
-        box-shadow: 0 18px 45px rgba(0,0,0,0.15);
+        box-shadow: 0 20px 45px rgba(0,0,0,0.15);
 
-        /* zoom from white background */
-        transform: scale(0.6);
+        /* zoom animation */
+        transform: scale(0.65);
         opacity: 0;
-        animation: zoomIn 2.8s ease forwards;
+        animation: zoomIn 2.6s ease forwards;
     }
 
     @keyframes zoomIn {
-        0% {
-            transform: scale(0.6);
-            opacity: 0;
-        }
-        100% {
+        to {
             transform: scale(1);
             opacity: 1;
         }
@@ -44,49 +49,58 @@
 
     h1 {
         color: #ff2f92;
-        font-size: 26px;
+        font-size: 1.6rem;
         margin-bottom: 16px;
     }
 
     p {
-        font-size: 14px;
+        font-size: 0.9rem;
         color: #555;
-        line-height: 1.6;
-        margin-bottom: 18px;
+        line-height: 1.55;
+        margin-bottom: 16px;
     }
 
     .ready {
-        font-weight: bold;
+        font-weight: 600;
         color: #ff2f92;
-        margin-bottom: 20px;
+        margin-bottom: 22px;
+        font-size: 0.95rem;
     }
 
     button {
+        width: 100%;
         background: linear-gradient(135deg, #ff2f92, #ff6fb1);
         border: none;
         color: white;
-        padding: 14px 32px;
-        font-size: 16px;
+        padding: 15px 0;
+        font-size: 1rem;
         border-radius: 30px;
         cursor: pointer;
-        box-shadow: 0 6px 18px rgba(0,0,0,0.2);
+        box-shadow: 0 6px 18px rgba(0,0,0,0.25);
     }
 
     button:active {
-        transform: scale(0.96);
+        transform: scale(0.97);
     }
 
     .footer {
         margin-top: 22px;
-        font-size: 12px;
+        font-size: 0.75rem;
         color: #777;
+    }
+
+    /* Desktop fallback (still centered like phone) */
+    @media (min-width: 768px) {
+        body {
+            background: #f2f2f2;
+        }
     }
 </style>
 </head>
 
 <body>
 
-<div class="card">
+<div class="phone-card">
     <h1>Happy Birthday,<br>Beautiful! 🎂✨</h1>
 
     <p>
