--- a/index.html
+++ b/index.html
@@ -2,120 +2,198 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-
-<!-- IMPORTANT: Mobile layout -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>Happy Birthday 💖</title>
+<title>It's Cake Time 🎂</title>
 
 <style>
-    * {
-        box-sizing: border-box;
-    }
+* {
+    box-sizing: border-box;
+}
 
-    body {
-        margin: 0;
-        height: 100vh;
-        background: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
-        overflow: hidden;
-    }
+body {
+    margin: 0;
+    height: 100vh;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
+    overflow: hidden;
+}
 
-    /* Phone screen card */
-    .phone-card {
-        width: 92vw;
-        max-width: 360px;
-        background: #fff6fa;
-        border-radius: 30px;
-        padding: 30px 22px 34px;
-        text-align: center;
-        box-shadow: 0 20px 45px rgba(0,0,0,0.15);
+.screen {
+    width: 92vw;
+    max-width: 360px;
+    text-align: center;
+}
 
-        /* zoom animation */
-        transform: scale(0.65);
-        opacity: 0;
-        animation: zoomIn 2.6s ease forwards;
-    }
+h1 {
+    color: #ff2f92;
+    font-size: 1.6rem;
+    margin-bottom: 6px;
+}
 
-    @keyframes zoomIn {
-        to {
-            transform: scale(1);
-            opacity: 1;
-        }
-    }
+.subtitle {
+    font-size: 0.9rem;
+    color: #666;
+    margin-bottom: 18px;
+}
 
-    h1 {
-        color: #ff2f92;
-        font-size: 1.6rem;
-        margin-bottom: 16px;
-    }
+.instructions {
+    background: #fff5f8;
+    border-radius: 20px;
+    padding: 14px;
+    font-size: 0.85rem;
+    color: #555;
+    margin-bottom: 18px;
+}
 
-    p {
-        font-size: 0.9rem;
-        color: #555;
-        line-height: 1.55;
-        margin-bottom: 16px;
-    }
+.cake-area {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-    .ready {
-        font-weight: 600;
-        color: #ff2f92;
-        margin-bottom: 22px;
-        font-size: 0.95rem;
-    }
+.cake {
+    width: 220px;
+    height: 120px;
+    background: linear-gradient(#f5d6b4, #e6b98a);
+    border-radius: 0 0 60px 60px;
+    position: relative;
+    overflow: hidden;
+}
 
-    button {
-        width: 100%;
-        background: linear-gradient(135deg, #ff2f92, #ff6fb1);
-        border: none;
-        color: white;
-        padding: 15px 0;
-        font-size: 1rem;
-        border-radius: 30px;
-        cursor: pointer;
-        box-shadow: 0 6px 18px rgba(0,0,0,0.25);
-    }
+.cake::before {
+    content: "";
+    position: absolute;
+    top: -20px;
+    left: 0;
+    width: 100%;
+    height: 40px;
+    background: #fff;
+    border-radius: 50%;
+}
 
-    button:active {
-        transform: scale(0.97);
-    }
+.candle {
+    position: absolute;
+    top: -45px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 10px;
+    height: 40px;
+    background: #ff4d6d;
+    border-radius: 5px;
+}
 
-    .footer {
-        margin-top: 22px;
-        font-size: 0.75rem;
-        color: #777;
-    }
+.flame {
+    position: absolute;
+    top: -15px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 12px;
+    height: 18px;
+    background: orange;
+    border-radius: 50%;
+}
 
-    /* Desktop fallback (still centered like phone) */
-    @media (min-width: 768px) {
-        body {
-            background: #f2f2f2;
-        }
-    }
+.cut-line {
+    position: absolute;
+    top: 0;
+    width: 3px;
+    height: 100%;
+    background: #ff2f92;
+    display: none;
+}
+
+.message {
+    margin-top: 16px;
+    font-size: 1.2rem;
+    color: #ff2f92;
+    font-weight: bold;
+    display: none;
+}
+
+.confetti {
+    position: absolute;
+    font-size: 18px;
+    animation: fall 1.5s linear forwards;
+}
+
+@keyframes fall {
+    from { transform: translateY(-20px); opacity: 1; }
+    to { transform: translateY(200px); opacity: 0; }
+}
 </style>
 </head>
 
 <body>
 
-<div class="phone-card">
-    <h1>Happy Birthday,<br>Beautiful! 🎂✨</h1>
+<div class="screen">
+    <h1>It’s Cake Time! 🎂</h1>
+    <div class="subtitle">Make your birthday wish come true!</div>
 
-    <p>
-        Today is all about celebrating the most amazing person in my world.
-        I’ve created something magical just for you on your special day...
-    </p>
-
-    <div class="ready">Ready for your birthday surprise?</div>
-
-    <button>Let’s Gooo 💖</button>
-
-    <div class="footer">
-        Made with endless love for your special day 💕
+    <div class="instructions">
+        Cut your birthday cake 🎉<br>
+        <strong>Swipe across the cake to cut it ✂️</strong>
     </div>
+
+    <div class="cake-area" id="cakeArea">
+        <div class="cake" id="cake">
+            <div class="candle"></div>
+            <div class="flame"></div>
+            <div class="cut-line" id="cutLine"></div>
+        </div>
+    </div>
+
+    <div class="message" id="message">Perfect Cut! 🎉✨</div>
 </div>
+
+<script>
+let isCut = false;
+const cake = document.getElementById("cake");
+const cutLine = document.getElementById("cutLine");
+const message = document.getElementById("message");
+
+cake.addEventListener("touchstart", startCut);
+cake.addEventListener("touchmove", moveCut);
+cake.addEventListener("touchend", endCut);
+
+function startCut(e) {
+    if (isCut) return;
+    cutLine.style.display = "block";
+}
+
+function moveCut(e) {
+    if (isCut) return;
+    const rect = cake.getBoundingClientRect();
+    const touchX = e.touches[0].clientX - rect.left;
+    cutLine.style.left = touchX + "px";
+}
+
+function endCut() {
+    if (isCut) return;
+    isCut = true;
+    cutLine.style.display = "none";
+    message.style.display = "block";
+    createConfetti();
+}
+
+function createConfetti() {
+    for (let i = 0; i < 20; i++) {
+        const confetti = document.createElement("div");
+        confetti.className = "confetti";
+        confetti.textContent = ["🎉","✨","🎂","💖"][Math.floor(Math.random()*4)];
+        confetti.style.left = Math.random() * 100 + "%";
+        confetti.style.top = "0px";
+        document.body.appendChild(confetti);
+
+        setTimeout(() => confetti.remove(), 1500);
+    }
+}
+</script>
 
 </body>
 </html>
